--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,6 +1,7 @@
 /* Accessibility pending. */
 
 :root {
+   --san-serif: Arial, Helvetica, sans-serif;
    --body-gutter-width: 1em;
    /* TODO : Refactor palette to hsl */
    --color-bright: #d6eefa;
@@ -33,9 +34,8 @@
 
 html, body {
    margin: 0;
-   border: none;
+   border: 0;
    padding: 0;
-   font-size: 1rem;
 }
 
 html {
@@ -49,6 +49,8 @@ body {
    top: 1em;
    right: 1em;
    left: 1em;
+   color: black;
+   font-size: 1rem;
    min-width: var(--min-width);
    min-height: var(--min-height);
    background-color: var(--color-brightest);
@@ -68,6 +70,7 @@ body {
    height: 1.25em;
 }
 .colorDiv {
+   caret-color: transparent;
    margin: 0;
    margin-right: 0.25em;
    border: 1px solid var(--hb-color-darkest);
@@ -76,19 +79,8 @@ body {
    height: calc(1.25em - 1px);
    float: left;
 }
-.colorCursor {
-   cursor: grab;
-   margin-right: 0.25em;
-   border: 1px solid var(--hb-color-darkest);
-   border-top: 0;
-   border-bottom: 0;
-   text-decoration: none;
-   position: absolute;
-   width: 1px;
-   height: calc(1.25em + 1px);
-   z-index: 1;
-}
 .playButton {
+   caret-color: transparent;
    display: inline-block;
    padding: 0;
    width: 1.75em;
@@ -108,9 +100,40 @@ body {
 #colorPaletteId {
    border: 1px solid var(--hb-color-darkest);
 }
-.colorCursor:active,
-.colorCursor:focus {
-   cursor: grabbing;
+.colorCursor {
+   cursor: move;
+   margin-right: 0.25em;
+   border: 1px solid var(--hb-color-darkest);
+   text-decoration: none;
+   position: absolute;
+   width: 1px;
+   height: 1.25em;
+   z-index: 1;
+}
+.colorCursor:active {
+   cursor: crosshair;
+}
+.xcolorCursor::after {
+   opacity: 0;
+   display: none;
+   color: black;
+   font-size: smaller;
+   font-family: var(--san-serif);
+   background-color: var(--color-brightest);
+   border: 1px solid var(--hb-color-darkest);
+   border-radius: .5em;
+   padding: .25em;
+   padding-left: .5em;
+   content: 'Drag to the desired color.';
+   position: relative;
+   top: 2em;
+   left: .25em;
+   width: 6em;
+}
+.xcolorCursor:hover::after {
+   opacity: 1;
+   display: inline-block;
+   transition: opacity 1s ease .5s;
 }
 #burgers, #colors {
    border: 0.25em solid var(--hb-color-darkest);
@@ -120,8 +143,10 @@ body {
    color: var(--content-color);
    background-color: transparent;
    font-size: 1em;
+   word-wrap: normal;
 }
 #colors {
+   outline: none; /* Need for Chrome */
    display: inline-block;
 }
 #colors div {
@@ -133,8 +158,7 @@ body {
 /* intentionally specific css */
 #burgers ul {
    display: inline-block;
-   line-height: 1em;
-   /* font-size: 1.25em; */
+   line-height: 1;
    list-style: none;
 }
 
@@ -171,7 +195,7 @@ body {
    text-decoration: none;
    height: 1em;
    width: 1em;
-   line-height: 1em;
+   line-height: 1;
    transition: var(--transition-all);
 }
 .burger div {
@@ -205,7 +229,7 @@ body {
 #burger4:focus,
 #burger4:active { background-color: var(--hb-bk-color-hover2); }
 #burger4 div { filter: var(--hb-drop-shadow); transition: var(--transition-all); }
-#burger4:focus div, /* #burger3:hover div,*/
+#burger4:focus div, /* #burger4:hover div,*/
 #burger4:active div { filter: none; transition: var(--transition-all); }
 
 #burger5 { border: var(--hb-chunk-size-third) solid transparent; }
